--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,17 @@
 #
 # SPDX-License-Identifier: LGPL-3.0-or-later
 
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.19)
 
 project(GradientDialog VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Widgets)
+qt_standard_project_setup()
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
-
-add_library(gradient_dialog STATIC
+qt_add_library(gradient_dialog STATIC
   gradient_dialog.cc
   gradient_dialog.h
   gradient_dialog.ui
@@ -27,11 +22,11 @@ add_library(gradient_dialog STATIC
   gradient_stops_edit.h
 )
 
-target_link_libraries(gradient_dialog PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(gradient_dialog PUBLIC Qt6::Widgets)
 
 target_include_directories(gradient_dialog PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(gradient_dialog_demo gradient_dialog_demo.cc)
+qt_add_executable(gradient_dialog_demo gradient_dialog_demo.cc)
 set_target_properties(gradient_dialog_demo PROPERTIES
   MACOSX_BUNDLE_GUI_IDENTIFIER com.github.kolcha.gradient-dialog-demo
   MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
@@ -39,4 +34,4 @@ set_target_properties(gradient_dialog_demo PROPERTIES
   MACOSX_BUNDLE TRUE
   WIN32_EXECUTABLE TRUE
 )
-target_link_libraries(gradient_dialog_demo PRIVATE gradient_dialog Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(gradient_dialog_demo PRIVATE gradient_dialog Qt6::Widgets)
